Fix SFTP plugin, m_mounter was not initialized

BUG: 474552